# double-batched-fft-library

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SwiftNetMLP.cpp  activation.h  bench_result_ours.json  dg2_header  dpcpp.csv  forward.cpp  main.cpp  pvc_header  swiftnet.cpp  testWorkGroupLayer.cpp  torch.csv
Samples/: sample_swiftnet.cpp
benchmarks/: CMakeLists.txt  benchmark_all.cpp  benchmark_image_compression.cpp  benchmark_inference.cpp  benchmark_inference.h  benchmark_nerf.cpp  benchmark_pinns.cpp  benchmark_training.cpp  benchmark_training.h  common_benchmarks.h  plot_results.py
benchmarks/results/: benchmark_image_compression.json  benchmark_training.json
build_arc/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_arc/source/: Makefile  cmake_install.cmake
build_arc/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-swiftnet_include-b858cb2.cmake  test-swiftnet_tests-b858cb2.cmake
bwd_matrices/: A_backward.csv  B_backward_last_layer.csv  C_backward.csv  D_backward_last_layer.csv  E_backward_last_layer.csv  F_backward_last_layer.csv  m_forward.csv  out_inter.csv
cmake/: CommonOptions.cmake  FindLevelZero.cmake
data/saved_matrices/: Grid_encoding_output.csv  Grid_network_output.csv  Grid_weights.csv  Identity_input.csv  Identity_network_output.csv  Identity_weights.csv  SphericalHarmonics_encoding_output.csv  SphericalHarmonics_input.csv  SphericalHarmonics_weights.csv
docs/: CMakeLists.txt  conf.py  index.rst
docs/manual/: build.rst  contributing.rst  index.rst  networks.rst
dpcpp_bindings/: .directory_structure.txt.swp  CMakeLists.txt  README.md  debug_sizes.py  directory_structure.txt  modules.py  pybind_module.cpp  setup.py  test_bwd_module.py  test_bwd_training.py  test_fwd_module.py
dpcpp_bindings/tiny_dpcpp_nn/: modules.py  pybind_module.cpp
dpcpp_bindings/tiny_nn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
include/: DeviceMem.h  Network.h  activation.h  common.h  common_device.h  common_host.h  config.h  encoding.h  encoding_factory.h  gpu_matrix.h  loss.h  multi_stream.h  network_with_encodings.h  optimizer.h  tnn_api.h  trainer.h  vec.h
include/Encodings/: composite.h  composite.h.yaml  empty.h  empty.h.yaml  frequency.h  frequency.h.yaml  grid.h  grid.h.yaml  grid_interface.h  grid_interface.h.yaml  identity.h  identity.h.yaml  oneblob.h  oneblob.h.yaml  triangle_wave.h  (+4 more)
python/: bench_result_pytorch.json  benchmark_dpcpp.py  common.py  compare_torch_dpcpp.py  dpcpp_grads.csv  dpcpp_loss.csv  mlp.py  mlp_benchmark.py  mlp_learning_an_image_pytorch.py  plot_benchmark.py  profile_torch_vs_dpcpp.py  test_bwd_training.py  test_compare_torch_dpcpp.py  test_dir_encoder.py  test_einstein.py  test_fwd.py  test_module.py  test_module_smoketest.py  test_packed_layout.py  test_sigma_mlp.py  torch.csv  torch_grads.csv  torch_loss.csv  utils.py
source/: CMakeLists.txt  DeviceMem.cpp  L1.cpp  L2.cpp  RelativeL1.cpp  RelativeL2.cpp  SwiftNetMLP.cpp  activation.h  adam.cpp  benchmark_time.cpp  benchmark_training.cpp  common.cpp  common_host.cpp  cross_entropy.cpp  get_bwd_matrices.cpp  loss.cpp  network_with_encodings.cpp  optimizer.cpp  output_test.cpp  sgd.cpp  swiftnet.cpp  test_bwd.cpp  test_bwd_matrices.cpp  test_dgemm_multiply.cpp  test_encoding.cpp  test_fwd.cpp  test_grid_encoding.cpp  test_idx.py  test_network_with_encoding.cpp  test_network_with_encodings.cpp  test_swiftnet.cpp  test_time.cpp  tnn_api.cpp  unitTest.cpp
source/Tests/: testWorkGroupLayer.cpp  test_SwitNetMLP.cpp  test_forward_pvc.cpp  tests-dg2.cpp
source/common/: CMakeLists.txt  DeviceMem.cpp  common.cpp  common_host.cpp
source/network/: CMakeLists.txt  SwiftNetMLP.cpp
source/network/kernel/: forward4.cpp  forward64.cpp  inference64.cpp  kernel_helper.h  training32.cpp
source/tests/: benchmark_training.cpp  test_SwitNetMLP.cpp  test_bwd.cpp  test_fwd.cpp  test_time.cpp  unittest.cpp
test/: CMakeLists.txt  common.cpp  doctest_common.cpp  doctest_devicematrix.cpp  doctest_devicemem.cpp  doctest_encodings.cpp  doctest_image_save.cpp  doctest_kernel_esimd.cpp  doctest_kernelhelper.cpp  doctest_kernelhelper_esimd.cpp  doctest_losses.cpp  doctest_network.cpp  doctest_network_with_encodings.cpp  doctest_swiftnet.cpp  doctest_training.cpp  get_bwd_matrices.cpp  inference.cpp  losses.cpp  mlp.h  test_padding.py
test/ref_values/bwd_matrices/: deltas.csv  grads.csv  grads_matrices.csv  inputs.csv  m_forward.csv  out_inter.csv
test/ref_values/encoding/grid/: encoding_config.json  encoding_params.csv  input_encoding.csv  loss.csv  output_encoding.csv  params_grad.csv  targets.csv
test/ref_values/encoding/identity/: encoding_config.json  input_encoding.csv  output_encoding.csv
test/ref_values/encoding/spherical/: encoding_config.json  input_encoding.csv  output_encoding.csv
test/ref_values/network_with_grid_encoding/HashGrid/: encoding_config.json  input_encoding.csv  input_network.csv  network_params.csv  output_encoding.csv  output_model.csv
test/ref_values/network_with_grid_encoding/Identity/: encoding_config.json  input_encoding.csv  input_network.csv  network_params.csv  output_model.csv  output_network.csv
test/ref_values/network_with_grid_encoding/full/: encoding_output.csv  input.csv  network_forward.csv  network_output.csv  network_params.csv  network_params0.csv  network_params10.csv  network_params100.csv
test/ref_values/network_with_grid_encoding/full_network/: input.csv  network_forward.csv  network_output.csv  network_params.csv
test/ref_values/network_with_grid_encoding/simple_arange/: input.csv  network_output.csv  network_params.csv
test/ref_values/network_with_grid_encoding/simple_full/: input.csv  network_output.csv  network_params.csv
test/ref_values/network_with_grid_encoding/simple_mlp/: network_forward.csv  network_output.csv  network_params.csv
test/ref_values/network_with_grid_encoding/simple_padded/: input.csv  network_output.csv  network_params.csv
test/ref_values/network_with_grid_encoding/simple_random/: network_output.csv
(+69 files in other folders)
